[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/block.png" type="Texture" id=1]
[ext_resource path="res://game/Block.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.179304, 2.66714 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.113214, 2.49016 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.97001, 0.11308 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.029, 0.0857239 )

[node name="Block" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -6.83235, -1.56007 )
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 6.89831, -1.45496 )
shape = SubResource( 2 )

[node name="Down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2( 0.0986767, 0.913465 )
shape = SubResource( 3 )

[node name="Up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2( 0.0589943, -3.94905 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
